# BitShift

./: CMakeLists.txt  binarytodecimal.cpp  binarytodecimal.h  deciamltobinary.cpp  decimaltobinary.h  decimaltohexa.cpp  decimaltohexa.h  hexatobinary.cpp  hexatobinary.h  hexatodecimal.cpp  hexatodecimal.h  main.cpp
